# RedSentinel

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
redsentinel/: cli.py
src/redsentinel/: cli.py  menu.py
src/redsentinel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/redsentinel/core/: html_reporter.py  pdf_reporter.py  planner.py  risk_heatmap.py  simulator.py  state.py
src/redsentinel/templates/: report.html
src/templates/: report.html
