[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redsentinel"
version = "0.1.0"
description = "AI-assisted red/purple team simulation and analysis framework"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Hackura" }
]

dependencies = [
  "jinja2",
  "matplotlib",
  "rich",
  "pytest"
]

[project.scripts]
redsentinel = "redsentinel.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

